--- a/public/secretariat_dashboard.html
+++ b/public/secretariat_dashboard.html
@@ -3,44 +3,94 @@
 <head>
     <meta charset="UTF-8">
     <title>Secretariat Dashboard - UPatras</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        body { margin: 0; font-family: 'Segoe UI', sans-serif; background-color: #f0f2f5; }
-        header { background: #222; color: white; padding: 15px 20px; display: flex; justify-content: space-between; }
+        /* Shared Styles matching Instructor/Student */
+        body { margin: 0; font-family: 'Segoe UI', 'Roboto', sans-serif; background-color: #f0f2f5; color: #444; }
         
-        .sidebar { width: 250px; background: white; height: 100vh; position: fixed; top: 0; left: 0; padding-top: 70px; border-right: 1px solid #ddd; }
-        .menu-item { display: block; padding: 15px 20px; color: #333; text-decoration: none; border-left: 4px solid transparent; }
-        .menu-item:hover, .menu-item.active { background: #f9f9f9; border-left-color: #444; font-weight: bold; }
+        header { background: #2c3e50; color: white; padding: 10px 30px; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
+        .logo-area { display: flex; align-items: center; gap: 15px; font-size: 18px; font-weight: 600; letter-spacing: 0.5px; }
+        .logo-area img { height: 35px; }
+        .user-info { font-size: 14px; display: flex; align-items: center; gap: 15px; }
+        .logout-btn { background: rgba(255,255,255,0.1); color: white; border: 1px solid rgba(255,255,255,0.2); padding: 6px 12px; cursor: pointer; border-radius: 4px; transition: all 0.3s; font-size:13px; }
+        .logout-btn:hover { background: rgba(255,255,255,0.2); }
+
+        .nav-bar { background: #fff; padding: 0 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.03); display: flex; gap: 30px; }
+        .nav-item { padding: 15px 5px; cursor: pointer; color: #666; font-weight: 500; border-bottom: 3px solid transparent; transition: all 0.3s; text-decoration: none; font-size: 15px; }
+        .nav-item:hover { color: #2c3e50; }
+        .nav-item.active { border-bottom-color: #3498db; color: #3498db; font-weight: 600; }
+
+        .container { padding: 30px 20px; max-width: 1100px; margin: 0 auto; }
+        .section-title { font-size: 22px; color: #2c3e50; margin-bottom: 15px; font-weight: 600; border-left: 5px solid #3498db; padding-left: 15px; }
+
+        /* Cards & Tables */
+        .card { background: white; padding: 25px; border-radius: 12px; box-shadow: 0 5px 20px rgba(0,0,0,0.05); margin-bottom: 20px; }
+        .table { width: 100%; border-collapse: collapse; }
+        .table th { text-align: left; padding: 12px; border-bottom: 2px solid #f0f0f0; color: #7f8c8d; font-size: 13px; text-transform: uppercase; }
+        .table td { padding: 12px; border-bottom: 1px solid #f0f0f0; font-size: 14px; vertical-align: middle; }
+        .table tr:hover td { background-color: #fafafa; }
+
+        /* Badges */
+        .badge { padding: 4px 8px; border-radius: 12px; font-size: 11px; font-weight: 600; text-transform: uppercase; color: white; }
+        .bg-blue { background: #3498db; }
+        .bg-orange { background: #f39c12; }
+        .bg-green { background: #27ae60; }
+
+        /* Buttons & Forms */
+        .btn { padding: 8px 15px; border: none; border-radius: 6px; cursor: pointer; font-size: 13px; font-weight: 500; display: inline-flex; align-items: center; gap: 5px; }
+        .btn-primary { background: #3498db; color: white; }
+        .btn-danger { background: #e74c3c; color: white; }
+        .btn-success { background: #27ae60; color: white; }
         
-        .main-content { margin-left: 250px; padding: 20px; margin-top: 60px; }
+        .input-group { margin-bottom: 15px; }
+        .input-group label { display: block; margin-bottom: 5px; font-weight: 600; font-size: 13px; }
+        .form-control { width: 100%; padding: 8px; border: 1px solid #ddd; border-radius: 4px; box-sizing: border-box; }
+
+        /* Modal */
+        .modal-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.5); z-index: 1000; align-items: center; justify-content: center; }
+        .modal { background: white; width: 600px; max-width: 90%; border-radius: 8px; overflow: hidden; box-shadow: 0 10px 30px rgba(0,0,0,0.2); }
+        .modal-header { padding: 15px 20px; background: #f8f9fa; border-bottom: 1px solid #eee; display: flex; justify-content: space-between; align-items: center; }
+        .modal-body { padding: 20px; max-height: 70vh; overflow-y: auto; }
     </style>
 </head>
 <body>
-    <header style="position:fixed; width:100%; z-index:100;">
-        <div style="display:flex; align-items:center; gap:10px;">
+    <header>
+        <div class="logo-area">
+            <img src="photos/logo.webp" alt="Logo" onerror="this.style.display='none'">
             <span>Γραμματεία Τμήματος</span>
         </div>
-        <button onclick="logout()" style="background:#444; color:white; border:none; padding:5px 15px; cursor:pointer;">Exit</button>
+        <div class="user-info">
+            <span>Χρήστης: <strong>Γραμματεία</strong></span>
+            <button onclick="logout()" class="logout-btn"><i class="fas fa-sign-out-alt"></i> Έξοδος</button>
+        </div>
     </header>
 
-    <div class="sidebar">
-        <div style="padding: 20px; text-align:center;">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6f/University_of_Patras_logo.svg/1200px-University_of_Patras_logo.svg.png" width="80">
-        </div>
-        <a href="#theses" class="menu-item active">Προβολή Διπλωματικών</a> <a href="#import" class="menu-item">Εισαγωγή Δεδομένων (JSON)</a> </div>
+    <nav class="nav-bar">
+        <a href="#theses" class="nav-item active">Διαχείριση Διπλωματικών</a>
+        <a href="#import" class="nav-item">Εισαγωγή Δεδομένων</a>
+    </nav>
 
-    <div class="main-content">
-        <h1>Επισκόπηση Τμήματος</h1>
-        <div id="content-area">
+    <div class="container" id="main-content">
+        </div>
+
+    <div id="manage-modal" class="modal-overlay">
+        <div class="modal">
+            <div class="modal-header">
+                <h3 style="margin:0;">Λεπτομέρειες & Ενέργειες</h3>
+                <button onclick="closeModal()" style="border:none; background:none; cursor:pointer; font-size:18px;">&times;</button>
             </div>
+            <div class="modal-body" id="modal-content">
+                </div>
+        </div>
     </div>
 
     <script>
         function logout() {
             fetch('../api/auth.php?action=logout').then(() => window.location.href = 'index.html');
         }
-        fetch('../api/auth.php?action=check').then(r => r.json()).then(d => {
-            if(!d.logged_in) window.location.href = 'index.html';
-        });
+        // Auth Check
+        fetch('../api/auth.php?action=check').then(r=>r.json()).then(d=>{ if(!d.logged_in) window.location.href='index.html'; });
     </script>
+    <script src="js/secretariat.js"></script>
 </body>
 </html>
